syntax = "proto3";

package com.netifi.acme;

import "google/protobuf/empty.proto";
import "logs.proto";

option java_package = "com.netifi.acme";
option java_outer_classname = "ParserProto";
option java_multiple_files = true;


service ParserService {
    rpc parseLogs (google.protobuf.Empty) returns (stream ParserResponse) {}
    rpc filterByProduct (FilterRequest) returns (stream ParserResponse) {}
}

message FilterRequest {
  string productId = 1;
}

message ParserResponse {
  string customerId = 1;
  string productId = 2;
  com.netifi.acme.LogResponse response = 3;
}
